virtual machine done